# Scraper

./: README.txt  pyproject.toml
arxiv/: Arxiv_python.json
arxiv/arxiv/: items.py  pipelines.py  settings.py
arxiv/arxiv/Results/: arxiv_python.json
arxiv/arxiv/spiders/: arxivphysics.py
translate/translate/: middlewares.py
