[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Cheedge <cheedgelee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"
black = "^22.3.0"
flake8 = "^4.0.1"
selenium = "^4.1.5"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
